new model(11 categories)

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 case "Squirrel2":
                     rstMsg = "다람쥐 ( " + p.toFixed(1) + "% )";
                     break;
-                case "Fox":
+                case "Fox2":
                     rstMsg = "여우 ( " + p.toFixed(1) + "% )";
                     break;
                 case "Rabbit":
