--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="image-upload-wrap">
             <input class="file-upload-input" type='file' onchange="readURL(this);" accept="image/*" />
             <div class="drag-text">
-                <h3 class="mt-5 pt-5">얼굴 사진을 올려놓거나 눌러서 업로드하세요</h3>
+                <h3 class="mt-5 pt-5">얼굴 사진을 올려놓거나<br /> 눌러서 업로드하세요</h3>
             </div>
         </div>
         <div class="file-upload-content">
