--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light nav_distance">
-        <a class="navbar-brand" href="#" onClick="removeUpload();return false;">닮은 얼굴</a>
+        <a class="navbar-brand" href="./index.html">닮은 얼굴</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
